# SDL2-GUI-GameEngine

./: .gitignore  CMakeLists.txt  LICENSE  README.md  SDL-GUI.sln  SDL-GUI.vcxproj  SDL-GUI.vcxproj.filters  main.cpp
SCore/: Configer.h  SColor.cpp  SColor.h  SEvent.h  SFont.cpp  SFont.h  SGameApp.cpp  SGameApp.h  SSignal.h  SString.cpp  SString.h  STTF_FontManager.cpp  STTF_FontManager.h  STextureManager.cpp  STextureManager.h  SVector2D.cpp  SVector2D.h
SDL2_Wrap/: SWindow.cpp  SWindow.h
SGUI/: SAbstractButton.cpp  SAbstractButton.h  SAbstractSlider.cpp  SAbstractSlider.h  SButton.cpp  SButton.h  SGUIManager.cpp  SGUIManager.h  SIndicator.cpp  SIndicator.h  SLineEdit - 副本.cpp  SLineEdit - 副本.h  SLineEdit.cpp  SLineEdit.h  SPainter.cpp  SPainter.h  SSlider.cpp  SSlider.h  SSwitchButton.cpp  SSwitchButton.h  SWidget.cpp  SWidget.h
x64/Debug/: SDL-GUI.exe.recipe  vc143.idb
x64/Debug/SDL-GUI.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  SDL-GUI.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
